# god-of-frames

./: .gitignore  CMakeLists.txt  README.md  settings.example.conf
scripts/: feedback_hub.py  package_release.ps1  update_hub.py  update_manifest.example.json
src/: bottleneck_analyzer.cpp  bottleneck_analyzer.h  control_server.cpp  control_server.h  dashboard_writer.cpp  dashboard_writer.h  gemini_client.cpp  gemini_client.h  history_store.cpp  history_store.h  main.cpp  overlay_manager.cpp  overlay_manager.h  remediator.cpp  remediator.h  settings.cpp  settings.h  system_monitor.cpp  system_monitor.h  task_queue.h  types.h  worker_pool.h
